[package]
name = "cryptors-price-slash-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = "0.5"
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread", "signal"]}
tracing-subscriber = "0.3"
tracing = "0.1"
backtrace = "0.3"
reqwest = "0.11"
serde_json = "1"